--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "flux": "^3.1.3",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-slick": "^0.23.1",
+    "slick-carousel": "^1.8.1",
+    "yarn": "^1.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
